Fixing bug of horizontal overflow issues on phone screens for slideshow and iframe

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -59,8 +59,9 @@ body {
   }
 
 /*      Slideshow       */
+
 .slideshow-left {
-  width: 952px;
+  width: 50vw;
   height: 315px;
   object-fit: fill;
   float: left;
@@ -68,7 +69,7 @@ body {
 }
 
 .slideshow-right {
-  width: 951px;
+  width: 50vw;
   height: 315px;
   object-fit: fill;
   float: right;
@@ -84,6 +85,7 @@ body {
   height: 250px;
   border: 5px solid #f9d342;
 }
+
 /*      Map */
 #map {
     margin-top: 25px;
@@ -99,6 +101,7 @@ body {
 }
 
 /*    Youtube Video   */
+
 .movie {
   padding-top: 20px;
   text-align: center;
@@ -106,9 +109,10 @@ body {
 }
 
 .movie iframe {
-  width: 560px;
+  width: 100%;
   height: 315px;
 }
+
 /*      Articale    */
 .findGym {
     margin: 27px 27px 27px 27px;
